<resources>
    <string name="app_name">PunchClockMockup2</string>
    <string name="start">Start</string>
    <string name="menu">Menu</string>
    <string name="list">List</string>
    <string name="clock">clock</string>
    <string name="stop">stop</string>
    <string name="toggle_start">Start</string>
    <string name="toggle_pause">Pause</string>
    <string name="buttonstartpause">ButtonStartPause</string>
    <string name="toast_message_started">Timer Started</string>
    <string name="toast_message_paused">Timer Paused</string>

    <!--FormatMillisIntoTimer-->
    <string name="set_timer">%1$s:%2$s:%3$s</string>
    <string name="set_time_dhm">%1$sd%2$sh%3$sm</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

