<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/punchclockbg1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTimer"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/set_timer"
        android:textColor="@color/primary_text_light"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/buttonStartPause"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:onClick="StartPause"
        android:textOff="@string/toggle_start"
        android:textOn="@string/toggle_pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTimer" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:onClick="Stop"
        android:text="@string/stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartPause" />

    <Button
        android:id="@+id/btnList"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:text="@string/list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnClock"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/clock"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnList"
        app:layout_constraintEnd_toStartOf="@+id/btnList"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>