<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.TimerFragment">

    <TextView
        android:id="@+id/textTimer"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/set_timer"
        android:textColor="@color/primary_text_light"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartPause"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/buttonStartPause"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:checked="false"
        android:textOff="@string/toggle_start"
        android:textOn="@string/toggle_pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTimer" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartPause" />

    <Button
        android:id="@+id/btnList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:text="@string/list"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="518dp" />

    <Button
        android:id="@+id/btnClock"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnList"
        app:layout_constraintEnd_toStartOf="@+id/btnList"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:text="@string/clock"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="518dp" />

</android.support.constraint.ConstraintLayout>